--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,3 +9,5 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+// Bootstrap theme
+@import "bootstrap-theme.min";
