feat(assets): optimize css
use bootswatch scss instead of compiled css files

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,9 +5,9 @@
 // Variables
 @import "variables";
 
-@import "front";
-
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 // Bootstrap theme
-@import "bootstrap-theme.min";
+@import "_bootswatch";
+@import "front";
+
