--- a/resources/assets/sass/_front.scss
+++ b/resources/assets/sass/_front.scss
@@ -65,7 +65,6 @@
 
 #recent .panel, .problem-detail .double-col .panel {
   padding: 0;
-
 }
 
 .edit_list li span {
@@ -78,5 +77,13 @@
 
   .info {
     font-size: smaller;
+  }
+}
+
+.submit {
+  .submit-meta {
+    .form-control {
+      color: $brand-info;
+    }
   }
 }
